--- a/config/database.yml
+++ b/config/database.yml
@@ -3,3 +3,9 @@ development:
   database: radium_one_test_development
   pool: 5
   timeout: 5000
+
+test:
+  adapter: postgresql
+  database: radium_one_test_test
+  pool: 5
+  timeout: 5000
